Name:                marray-quicksort
Version:             0.1
Synopsis:
    Fast quicksort implementation for mutable arrays.
Description:
    Haskell's @Data.List.Sort@ suffers performance when sorting large lists
    because of the necessary GC overhead. This library provides a non-stable
    quicksort implementation for mutable arrays that is supposed to be somewhat
    faster.
Category:            Data Structures, Recursion
License:             BSD3
License-file:        LICENSE
Author:              Petr Pudlák
Copyright:           (c) 2012 Petr Pudlák
Maintainer:          Petr Pudlák <petr.mvd@gmail.com>
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           Experimental
Homepage:            https://github.com/ppetr/marray-quicksort
Bug-reports:         https://github.com/ppetr/marray-quicksort/issues
--Extra-Source-Files:  README.md, LICENSE
Extra-Source-Files:  LICENSE

Source-repository head
  type:     git
  location: git://github.com/ppetr/marray-quicksort.git

Library
    Build-Depends:      base >= 3 && < 5, array >= 0.2
    Exposed-Modules:    Data.Array.MArray.Quicksort
    hs-source-dirs:     src
    ghc-options:        -O2
    Default-Language:   Haskell98

--Test-Suite basic-test
--    Type:               exitcode-stdio-1.0
--    Main-Is:            Test.hs
--    Build-Depends:      base >= 3 && < 5, array >= 0.2, marray-quicksort == 0.1
--    hs-source-dirs:     src-test
--    ghc-options:        -O2
--    Default-Language:   Haskell98
